--- a/CollectorQi/Views/Batch/ESCL000/IntegracaoMovtoPage.xaml
+++ b/CollectorQi/Views/Batch/ESCL000/IntegracaoMovtoPage.xaml
@@ -3,9 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              Title="Integração"
-             x:Class="CollectorQi.Views.IntegracaoMovtoPage">
+             x:Class="CollectorQi.Views.IntegracaoMovtoPage" BackgroundImage="pageBackground.png">
     <ContentPage.Content>
-        <Grid BackgroundColor="#4E4E4E" Opacity="1">
+        <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
