--- a/CollectorQi/Views/Batch/IntegracaoPage.xaml
+++ b/CollectorQi/Views/Batch/IntegracaoPage.xaml
@@ -3,9 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              Title="Integração"
-             x:Class="CollectorQi.Views.IntegracaoPage" >
+             x:Class="CollectorQi.Views.IntegracaoPage" BackgroundImage="pageBackground.png" > 
     <ContentPage.Content>
-        <Grid BackgroundColor="#4E4E4E" Opacity="1">
+        <Grid BackgroundColor="White" Opacity="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
