--- a/CollectorQi/Views/ESCL018/InventarioListaItemPage.xaml
+++ b/CollectorQi/Views/ESCL018/InventarioListaItemPage.xaml
@@ -89,7 +89,7 @@
                                                         <ColumnDefinition Width="Auto" />
                                                     </Grid.ColumnDefinitions>
                                                     <Label Grid.Row="0" Grid.Column="0" Text="Item: " FontAttributes="Bold"  FontSize="Small" />
-                                                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding ItCodigo}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Small" />
+                                                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodItem}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Small" />
                                                 </Grid>
                                             </StackLayout>
                                         </Grid>
