--- a/CollectorQi/Views/Armazenagem/ESCL027/GuardaMateriaisDepositoListaPage.xaml
+++ b/CollectorQi/Views/Armazenagem/ESCL027/GuardaMateriaisDepositoListaPage.xaml
@@ -14,20 +14,38 @@
                 </Grid>
             </Frame>
 
-            <CollectionView x:Name="cvDepositosGuardaMaterial" ItemsSource="{Binding ObsDepositosGuardaMaterial}" SelectionChanged="cvDepositosGuardaMaterial_SelectionChanged" SelectionMode="Single" Margin="10,0,10,0">
+
+            <StackLayout Spacing="1" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                <Frame HorizontalOptions="FillAndExpand" HasShadow="true" Margin="12,2,12,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB" HeightRequest="30">
+
+                    <SearchBar IsVisible="{Binding SearchMode}" 
+                               Placeholder="Digite o código ou descrição do depósito..." 
+                               Text="{Binding SearchText}" 
+                               x:Name="SearchBarCodDepos" 
+                               TextChanged="Handle_TextChanged" 
+                               VerticalOptions="StartAndExpand"
+                               HorizontalOptions="StartAndExpand"
+                               Margin="0,0,0,0"
+                               FontSize="Small"/>
+                </Frame>
+
+            </StackLayout>
+
+            <CollectionView x:Name="cvDepositosGuardaMaterial" ItemsSource="{Binding Items}" SelectionChanged="cvDepositosGuardaMaterial_SelectionChanged" SelectionMode="Single" Margin="10,0,10,0">
                 <CollectionView.EmptyView>
                     <StackLayout>
-                        <Label Text="Nenhuma nota fiscal em andamento" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" TextColor="Silver" />
+                        <Label Text="Nenhuma Depósito Encontrado" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" TextColor="Silver" />
                     </StackLayout>
                 </CollectionView.EmptyView>
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                           <StackLayout Spacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                            <Frame VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" HasShadow="true" Margin="10,10,10,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
+                              
+                              
+                            <Frame VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand" HasShadow="true" Margin="10,5,10,10" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB" Padding="10,10,10,15">
 
-                                <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="0">
+                                <Grid HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" Margin="0">
                                     <Grid.RowDefinitions>
-                                        <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
                                     <Grid.ColumnDefinitions>
@@ -35,32 +53,16 @@
                                         <ColumnDefinition Width="80"/>
                                     </Grid.ColumnDefinitions>  
                                     
-                                    <Grid Grid.Row="1" HorizontalOptions="FillAndExpand">
+                                    <Grid Grid.Row="1" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand">
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="*" />
                                         </Grid.RowDefinitions>
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="Auto" />
-                                            <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="*" />
                                         </Grid.ColumnDefinitions>
-                                        <Label Grid.Row="0" Grid.Column="0" Text="Nome: " FontAttributes="Bold" FontSize="Micro" />
-                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding Nome}" VerticalTextAlignment="End" HorizontalOptions="Start" FontSize="Micro" />
+                                        <Label Grid.Row="0" Grid.Column="0" Text="{Binding CodDeposNome}" VerticalTextAlignment="Start" HorizontalOptions="Start" FontSize="Small" />
                                     </Grid>
-                                    
-                                    <Grid Grid.Row="2" HorizontalOptions="StartAndExpand">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="*" />
-                                        </Grid.RowDefinitions>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="Auto" />
-                                            <ColumnDefinition Width="Auto" />
-                                        </Grid.ColumnDefinitions>
-                                        <Label Grid.Row="0" Grid.Column="0" Text="Código Deposito:" FontAttributes="Bold" FontSize="Micro" />
-                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodDepos}" FontSize="Micro" />
-                                    </Grid>                                    
                                 </Grid>
-
                             </Frame>
                         </StackLayout>
                     </DataTemplate>
