--- a/CollectorQi/Views/Recebimento/RecebimentoPage.xaml
+++ b/CollectorQi/Views/Recebimento/RecebimentoPage.xaml
@@ -2,11 +2,12 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             Title="Armazenagem"
+             Title="Recebimento"
              BackgroundImage="pageBackground.png"
-             x:Class="CollectorQi.Views.ArmazenagemPage">
+             x:Class="CollectorQi.Views.RecebimentoPage">
     <ContentPage.Content>
-        <Grid>
+        <!--<Grid BackgroundColor="#4E4E4E" Opacity="1"> BackgroundImage="pageBackground.png"-->
+        <Grid>            
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
@@ -17,8 +18,7 @@
                             <ImageCell Text="{Binding Name}" 
                                        Detail="{Binding SubTitle}" 
                                        ImageSource="{Binding Image}" 
-                                       TextColor="White" 
-                                       DetailColor="#aaaaaa"                                      
+                                       TextColor="Black" DetailColor="{StaticResource NavigationPrimary}"                                   
                                        CommandParameter="{Binding .}"/>
                         </DataTemplate>
                     </ListView.ItemTemplate>
