--- a/CollectorQi/Views/Recebimento/ESCL028/NotaFiscalConferenciaReparosListaPage.xaml
+++ b/CollectorQi/Views/Recebimento/ESCL028/NotaFiscalConferenciaReparosListaPage.xaml
@@ -24,7 +24,7 @@
                           <StackLayout Spacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
                             <Frame VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" HasShadow="true" Margin="10,10,10,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB" Padding="0">
 
-                            <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="0">
+                            <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="10,12,10,-25">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto" />
                               <!--      <RowDefinition Height="Auto" />
@@ -49,7 +49,7 @@
                                     <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodItem}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" FontSize="Small" />
                                 </Grid>
                                 
-                                <Grid Grid.Row="0" MinimumWidthRequest="20" Grid.Column="1" HorizontalOptions="CenterAndExpand" VerticalOptions="Center">
+                                <Grid Grid.Row="0" MinimumWidthRequest="20" Grid.Column="1" HorizontalOptions="CenterAndExpand" VerticalOptions="Center" Margin="0,-4,0,0">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="*" />
                                         <RowDefinition Height="*" />
